--- a/winnie/web/templates/index.html
+++ b/winnie/web/templates/index.html
@@ -7,7 +7,8 @@
 
         <title>winnie says welcome</title> 
 
-        <link rel="stylesheet" type="text/css" media="print" href="/static/style.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/style.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="http://www.blueprintcss.org/blueprint/src/typography.css" />
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
         <script type="text/javascript">
@@ -23,25 +24,54 @@
             }
 
             function set_channel(channel) {
-                $("div.channels").hide();
-                $("div.monitor").attr("channel", channel);
-                $("div.monitor").attr("ref", "");
+                    if (channel == "") {
+                        $("#channels").show(200);
+                        $("div#monitorcontent").html("");
+                    } else {
+                        $("#channels").hide(200);
+                    }
 
-                setInterval(update_monitor, 2000);
+                $("div#monitor").attr("channel", channel);
+                $("div#monitor").attr("ref", "");
+                $("div#monitor").attr("paused", 0);
+
+                update_controls();
+
+               $("div#monitor").attr("interval", setInterval(update_monitor, 2000));
                 //update_monitor();
             }
 
+            function build_argument(e) {
+                var argument = $("<div/>").attr("class", "event");
+
+                argument.append($("<span/>").attr("class","source").text(e.source.split("!")[0]));
+                argument.append($("<span/>").attr("class","argument").text(e.arguments[0]));
+
+                return argument;
+            }
+
             function update_monitor() {
-                get_log(
-                    $("div.monitor").attr("channel"),
-                    $("div.monitor").attr("ref"),
-                    function(data) {
-                        data.response.reverse();
-                        $.each(data.response, function(i, e) {
-                            $("<div/>").text(e.arguments[0]).appendTo("div.monitor");
-                            $("div.monitor").attr("ref", e.ref);
-                        });
-                    });
+                if ($("div#monitor").attr("channel") != "" && $("div#monitor").attr("paused") == 0) {
+                    get_log(
+                        $("div#monitor").attr("channel"),
+                        $("div#monitor").attr("ref"),
+                        function(data) {
+                            data.response.reverse();
+                            $.each(data.response, function(i, e) {
+                                build_argument(e).appendTo("div#monitorcontent");
+
+                                $("div#monitor").animate({
+                                    scrollTop: $("div#monitorcontent").height()
+                                }, 10);
+
+                                $("div#monitor").attr("ref", e.ref);
+                            });
+                            });
+                }
+
+                if ($("div#monitor").attr("channel") == "") {
+                    clearInterval($("div#monitor").attr("interval"));
+                }
             }
 
             function get_list(entity, callback) {
@@ -56,7 +86,30 @@
                 var url = (ref=="") ? "/log/"+channel : "/log/"+channel+"/"+ref;
                 make_request(url.replace("#","_"), callback);
             }
+            
+            var controls = {
+                "channels": function(){ set_channel(""); },
+                "accounts": function() { set_user(""); ],
 
+                "pause": function(){ $("div#monitor").attr("paused",1); },
+                "resume": function(){ $("div#monitor").attr("paused",0); },
+
+            };
+
+            function update_controls() {
+                var ctls = [];
+
+                if ($("div#monitor").attr("channel") != "") {
+                    ctls.push("channels");
+    
+                    //ctls.push( ($("div#monitor").attr("paused")==0) ? "pause" : "resume" );
+                }
+                
+                $("ul.controls").html("")
+                $.each(ctls, function(i,item) {
+                        $("<li/>").text(item).click(function(){controls[item](); update_controls();}).appendTo("ul.controls")
+                });
+            }
 
             $(document).ready(function () {
                 // Pulls a list of all channels
@@ -74,19 +127,21 @@
     <body>
         <div id="content">
 
-            <div class="channels">
-                <span class="title">channels</span>
-                <ul id="channels"></ul>
-            </div>
-
             <div class="errors">
                 <h3 class="etitle">&nbsp;</h3>
                 <span class="emessage">&nbsp;</span>
             </div>
 
-            <div class="monitor">
-                &nbsp;
+            <ul id="channels"></ul>
+
+            <div class="monitorwrapper">
+                <div id="monitor">
+                    <div id="monitorcontent">&nbsp;</div>
+                </div>
+                <ul class="controls">
+                </ul>
+                </div>
             </div>
-        </div>
+            
     </body>
 </html>
