--- a/winnie/web/templates/index.html
+++ b/winnie/web/templates/index.html
@@ -125,7 +125,10 @@
     </head> 
 
     <body>
+        <p class="horizontal right"><span>winnie says hello</span></p>
+
         <div id="content">
+
 
             <div class="errors">
                 <h3 class="etitle">&nbsp;</h3>
@@ -134,14 +137,18 @@
 
             <ul id="channels"></ul>
 
+
+
             <div class="monitorwrapper">
                 <div id="monitor">
                     <div id="monitorcontent">&nbsp;</div>
                 </div>
                 <ul class="controls">
                 </ul>
-                </div>
             </div>
-            
+        </div>
+    </div>
+
+    <p class="horizontal left">&nbsp;</p>
     </body>
 </html>
