--- a/winnie/web/static/style.css
+++ b/winnie/web/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #dfdfdf;
+    background-color: #f9f2b6;
 }
 
 #container {
@@ -15,7 +15,7 @@ div.watch, div.detail {
 }
 
 .output {
-    background-color: white;
+    background: #fff2f2 url('http://o.imm.io/6ZV.jpg') bottom right no-repeat;
     border-bottom: 1px solid gray;
     border-top: 1px solid gray;
 }
@@ -44,10 +44,10 @@ li .event .source {
     float: left;
     width: 80px;
     text-align: right;
+    color: #555;
 }
 
 li .event .argument {
-    background: #ddd;
     display: block;
     width: 80%;
     margin-left: 90px;
