--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .image { 
-  background: url(/images/bg.jpg) no-repeat center center fixed; 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
