--- a/main.css
+++ b/main.css
@@ -89,3 +89,15 @@ div.item .center {
 div.item .right {
 }
 
+p.woof {
+    position:absolute;
+    width:100%;
+    top:100%;
+
+    background: url("https://raw.github.com/jmkogut/winnie/master/doc/mascotu.jpg?raw=true") no-repeat;
+    text-indent: -9999px;
+    width: 100%; height: 512px;
+    background-position: center;
+    margin: 1.5em;
+    z-index: 999;
+}
