--- a/main.css
+++ b/main.css
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .row > .item {
+    text-align: center;
     width: 25%;
 
     min-height: 120px;
@@ -77,6 +78,9 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center; 
     */
 }
+.item > p {
+    text-align: left;
+}
 
 div.item .left {
     margin-left: 80px;
@@ -87,6 +91,13 @@ div.item .center {
 
 
 div.item .right {
+}
+div.left h2 {
+    text-indent: -9999px;
+    background: url("images/python.png") no-repeat center;
+    background-size:  80px 80px;
+    width: 100%; height: 80px;
+    text-align: center;
 }
 
 p.woof {
