--- a/main.css
+++ b/main.css
@@ -105,10 +105,9 @@ p.woof {
     width:100%;
     top:100%;
 
-    background: url("https://raw.github.com/jmkogut/winnie/master/doc/mascotu.jpg?raw=true") no-repeat;
+    background: url("http://resume.chex.io/winnie/images/mascotu.png") ni-repeat center;
     text-indent: -9999px;
     width: 100%; height: 512px;
-    background-position: center;
     margin: 1.5em;
     z-index: 999;
 }
