--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ p.woof {
     width:100%;
     top:100%;
 
-    background: url("http://resume.chex.io/winnie/images/mascotu.png") ni-repeat center;
+    background: url("http://resume.chex.io/winnie/images/mascotu.png") no-repeat center;
     text-indent: -9999px;
     width: 100%; height: 512px;
     margin: 1.5em;
