--- a/web.static/style.css
+++ b/web.static/style.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
+nav > ul > li > a {
+    text-decoration: none;
+    color: #ddd;
+}
 
 .image { 
   background: url(/static/bg.jpg) no-repeat center center fixed; 
