--- a/web.static/style.css
+++ b/web.static/style.css
@@ -15,6 +15,8 @@ nav > ul > li > a {
 
 .image { 
   background: url(/static/bg.jpg) no-repeat center center fixed; 
+  }
+  .splash {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -22,7 +24,11 @@ nav > ul > li > a {
 
   position:absolute; width:100%; height:100%;
 }
-
+.fill {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 .image h1 {
     font-size: 2.8em;
     background: rgba(75,75,75,0.4);
